package com.faetec.projetofinal.entity;

public class Prato {
    private int codigo;
    private String nome;
    private String descricao;
    private TiposPrato tipo;
    private double preco;

    public int getCodigo() { return codigo; }
    public void setCodigo(int codigo) { this.codigo = codigo; }

    public String getNome() { return nome; }
    public void setNome(String nome) { this.nome = nome; }

    public String getDescricao() { return descricao; }
    public void setDescricao(String descricao) { this.descricao = descricao; }

    public TiposPrato getTipo() { return tipo; }
    public void setTipo(TiposPrato tipo) { this.tipo = tipo; }

    public double getPreco() { return preco; }
    public void setPreco(double preco) { this.preco = preco; }
}