@startuml Restaurante
hide circle
skinparam linetype ortho
entity Cliente {
    * codigo : int <<PK>>
    --
    nome : varchar
    cidade : varchar
    celular : varchar
    email : varchar
}

entity Garcom {
    * codigo : int <<PK>>
    --
    nome : varchar
    telefone : varchar
    cpf : varchar
    salario : decimal
    turno : varchar
}

entity Mesa {
    * codigo : int <<PK>>
    --
    quantidade_lugares : int
    setor : varchar
    situacao : varchar
}

entity Prato {
    * codigo : int <<PK>>
    --
    nome : varchar
    descricao : varchar
    tipo : varchar
    preco : decimal
}

entity Pedido {
    * codigo : int <<PK>>
    --
    data : date
    status : varchar

    cliente_id : int <<FK>>
    mesa_id : int <<FK>>
    garcom_id : int <<FK>>
}

entity ItemPedido {
    * pedido_id : int <<FK>>
    * prato_id : int <<FK>>
    --
    quantidade : int
    preco_unitario : decimal
    subtotal : decimal
}

Cliente "1" ||--o{ "0..*" Pedido : realiza >

Garcom "1" ||--o{ "0..*" Pedido : atende >

Mesa "1" ||--o{ "0..*" Pedido : pertence <

Pedido "1" ||--|{ "1..*" ItemPedido : referencia <

Prato "1" ||--o{ "0..*" ItemPedido : compõe <
@enduml